--- a/src/assets/scss/md/_colors.scss
+++ b/src/assets/scss/md/_colors.scss
@@ -113,6 +113,7 @@ $blue-A100: #82b1ff !default;
 $blue-A200: #448aff !default;
 $blue-A400: #2979ff !default;
 $blue-A700: #2962ff !default;
+$blue-A50: #00Adb5 !default;
 $blue: $blue-500 !default;
 
 
@@ -339,3 +340,4 @@ $azulado-50:#00Adb5!default;
 
 $black: #000000; $rgb-black: "0,0,0" !default;
 $white: #ffffff; $rgb-white: "255,255,255" !default;
+
