--- a/src/assets/scss/md/_colors.scss
+++ b/src/assets/scss/md/_colors.scss
@@ -104,7 +104,7 @@ $blue-100: #bbdefb !default;
 $blue-200: #90caf9 !default;
 $blue-300: #64b5f6 !default;
 $blue-400: #42a5f5 !default;
-$blue-500: #2196f3 !default;
+$blue-500: #00Adb5 !default;
 $blue-600: #1e88e5 !default;
 $blue-700: #1976d2 !default;
 $blue-800: #1565c0 !default;
@@ -114,7 +114,7 @@ $blue-A200: #448aff !default;
 $blue-A400: #2979ff !default;
 $blue-A700: #2962ff !default;
 $blue-A50: #00Adb5 !default;
-$blue: $blue-500 !default;
+$blue: #00Adb5 !default;
 
 
 $light-blue-50: #e1f5fe !default;
@@ -138,9 +138,9 @@ $cyan-50: #e0f7fa !default;
 $cyan-100: #b2ebf2 !default;
 $cyan-200: #80deea !default;
 $cyan-300: #4dd0e1 !default;
-$cyan-400: #26c6da !default;
+$cyan-400: #00Adb5 !default;
 $cyan-500: #00bcd4 !default;
-$cyan-600: #00acc1 !default;
+$cyan-600: #00Adb5 !default;
 $cyan-700: #0097a7 !default;
 $cyan-800: #00838f !default;
 $cyan-900: #006064 !default;
