--- a/src/assets/scss/md/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/md/_sidebar-and-main-panel.scss
@@ -231,7 +231,7 @@
               width: 40px;
               display: inline-block;
               height: 40px;
-              background: $white-color;
+              //  background: $blue-color;
               border-radius: 50%;
               text-align: center;
               overflow: hidden;
@@ -266,7 +266,7 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        background-color: rgba(27, 27, 27, 0.87);
+         background-color: #780089;
         opacity: .85;
         top: 0;
         left: 0;
