--- a/src/assets/scss/md/_variables.scss
+++ b/src/assets/scss/md/_variables.scss
@@ -26,6 +26,7 @@ $white-transparent: rgba($white-color, .8);
 $gray-color:  #999999 !default;
 
 $brand-primary: #00adb5 !default;
+$brand-pink: #891489 !default;
 $brand-success: $green !default;
 $brand-danger: $red !default;
 $brand-warning: $orange !default;
